# Desenvolvimento_de_API_com_Flask

./: README.md
dio_bank/: pyproject.toml
dio_bank/instance/: blog.sqlite
dio_bank/migrations/versions/: 2c750e28427d_add_active_attr_in_user.py  911176e300dd_initial_migration.py  fd08e611c20f_initial_migration.py
dio_bank/src/: app.py  utils.py
dio_bank/src/controllers/: auth.py  role.py  user.py
dio_bank/tests/integration/: conftest.py
dio_bank/tests/integration/controllers/: test_user.py
dio_bank/tests/unit/: test_utils.py
