[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["AAkwk <aakawakitas12@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.3"
flask-sqlalchemy = "3.1.1"
flask-migrate = "4.0.5"
flask-jwt-extended = "4.5.3"
jinja2 = "3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"